// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Macros [CS-602] macro keyword is case insensitive 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "error",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "red",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros [CS-1470] code macro converts to code node with java language 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": "java",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "public static main(String test) {
        System.out.print("test");
     }",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros [CS-1470] code macro converts to code node with xml language 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": "xml",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "<test attr='value'><nested/></test>",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros [CS-1470] noformat macro converts to code node with no language 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "preformatted
text
with
linebreaks",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros [CS-3139] code macro accepts C++ as language 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": ""This is a plus + sign"",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "c++",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "const a = 3 + 7",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFEXP-492: Code block renders correctly inside list - fewer newlines 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "b 
zz c 
d",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFEXP-492: Code block renders correctly inside list - ignore list inside codeblock 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "b 
** c 
d",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFEXP-492: Code block renders correctly inside list 1`] = `
{
  "content": [
    {
      "attrs": {
        "order": 1,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "a ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "attrs": {
                "language": "java",
                "uniqueId": null,
              },
              "content": [
                {
                  "text": "b 
zz c 
d",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFS-277 should not blow up when default color is passed 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "color": "#000000",
              },
              "type": "textColor",
            },
          ],
          "text": "foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFS-719 should not blow up when a valid adf macro is passed in 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ADFS-719 should place invalid adf macro inside a code block w/err msg 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "Invalid ADF Macro: {"invalid": "foobar"}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ESS-2539 should ignore the newline right before an empty node 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is sample text ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros ESS-2539 should not ignore the newline if there is text after empty node 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is sample text ",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": " some text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros Should take only first occurrence of attribute into account 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": ""the real title"",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "java",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "const a = 3 + 7",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros Should work with multiple equal signs in a single attribute 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "title with = multiple=equal=signs",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "java",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "const a = 3 + 7",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should allow pipes within colour macro, and not render as a table 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
          ],
          "text": "|",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should collapse and join outer macros 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "This text is inside panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "only quote",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should collapse outer macros 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "Panel with nested quote here",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should convert multiple quotes containing string 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should convert panels 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "Panel with nested quote here",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should convert simple quotes into a top level node 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "simple quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should convert string with quote into paragraph and quote 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a string with a ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should lift attachment node when it is inside macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is a text",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file11",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file12",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file13",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file21",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file22",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file23",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file31",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file32",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file33",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "text",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file41",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file42",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-file43",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is a text as well",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should lift rule node when it is inside macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is a text",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "type": "rule",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is a text as well",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should map panel bgColor in colorName to panel type 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "error",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "Panel with nested quote here",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should map panel bgColor in hex value to panel type 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "success",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "Panel with nested quote here",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should map panel bgColor in hex value to panel type 2`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "My Title",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "Panel with nested quote here",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should not process code contents 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": "xml",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "this is a {color:red}colored text{color}{noformat}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should not process noformat contents 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "{code}code inside noformat{code}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should process code with title 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "title",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "java",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "const i = 0;",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render {anchor} as empty string 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "You cannot see this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render {loremipsum} as plain text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is plain text {loremipsum}",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render attachment nodes inside quotes 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is text inside a quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "content": [
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file11",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file12",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file13",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
          ],
          "type": "mediaGroup",
        },
        {
          "content": [
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file21",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file22",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file23",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file31",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file32",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file33",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
          ],
          "type": "mediaGroup",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "text",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "content": [
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file41",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file42",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
            {
              "attrs": {
                "__contextId": null,
                "__displayType": null,
                "__external": false,
                "__fileMimeType": null,
                "__fileName": null,
                "__fileSize": null,
                "__mediaTraceId": null,
                "alt": "",
                "collection": "",
                "height": null,
                "id": "abc-file43",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": null,
              },
              "type": "media",
            },
          ],
          "type": "mediaGroup",
        },
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "this is text at end of a quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render green success panel 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "success",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "green",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render list in a blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "something",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        {
          "content": [
            {
              "content": [
                {
                  "attrs": {
                    "localId": null,
                  },
                  "content": [
                    {
                      "text": "list item",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "listItem",
            },
          ],
          "type": "bulletList",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render macro likes {macrolike} as plain text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is plain text {macrolike}",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render red error panel 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "error",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "red",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should render rule node if it is on the top level 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "rule",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a text as well",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should split nodes if there is more than one level of depth 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote with a ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": " inside",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should support strings with a wrong order of macros 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "panel with a ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "quote inside",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " but it is broken",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should title of noformat 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "title",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "code inside noformat",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h1 to Bold and Uppercase under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "HEADER ONE",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h2 to Bold and Italic under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
                {
                  "type": "em",
                },
              ],
              "text": "header two",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h3 to Bold under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
              ],
              "text": "header three",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h4 to Bold and Gray under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "strong",
                },
                {
                  "attrs": {
                    "color": "#97a0af",
                  },
                  "type": "textColor",
                },
              ],
              "text": "header four",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h5 to Italic and Gray under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "type": "em",
                },
                {
                  "attrs": {
                    "color": "#97a0af",
                  },
                  "type": "textColor",
                },
              ],
              "text": "header five",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Macros should transform h6 to Gray under blockquote 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "marks": [
                {
                  "attrs": {
                    "color": "#97a0af",
                  },
                  "type": "textColor",
                },
              ],
              "text": "header six",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;
